updated further info

--- a/news-and-views/editors-blog/posts/2023/03/06/data-science-act.qmd
+++ b/news-and-views/editors-blog/posts/2023/03/06/data-science-act.qmd
@@ -41,6 +41,8 @@ This transcript has been produced using [speech-to-text transcription software](
 **Speaker**
 Text -->
 
+###### **&larr; Back to [Editors' blog](/news-and-views/editors-blog/index.qmd)**
+
 ::: {.further-info}
 ::: grid
 ::: {.g-col-12 .g-col-md-6}
