--- a/news-and-views/datasciencebites/posts/2023/03/02/basket-complementarity.qmd
+++ b/news-and-views/datasciencebites/posts/2023/03/02/basket-complementarity.qmd
@@ -60,8 +60,7 @@ Basket complementarity could also be used to help individuals understand their o
  <iframe src="https://moinak.shinyapps.io/MarketBasketDashboard/" style="border: none; width: 100%; height: 500px" frameborder="0"></iframe>
 ```
 
-----
-
+::: {.further-info}
 ::: grid
 ::: {.g-col-12 .g-col-md-6}
 About the author
@@ -86,5 +85,4 @@ How to cite
 : Bhaduri, Moinak. 2023. "Using ‘basket complementarity’ to make product recommendations." Real World Data Science, March 2, 2023. https://realworlddatascience.net/news-and-views/datasciencebites/posts/2023/03/02/basket-complementarity.html
 :::
 :::
-
-----
+:::
