--- a/news-and-views/editors-blog/posts/2023/03/06/data-science-act.qmd
+++ b/news-and-views/editors-blog/posts/2023/03/06/data-science-act.qmd
@@ -21,7 +21,7 @@ On February 14, 2023, a bipartisan group of US legislators introduced the [Data 
 
 Check out our full conversation below or on YouTube.
 
-{{< video link >}}
+{{< video https://www.youtube.com/embed/OaRFFgKb1S0 >}}
 
 <!-- ## Timestamps
 *
@@ -31,14 +31,15 @@ Check out our full conversation below or on YouTube.
 ## Quotes
 *
 *
-*
+* -->
 
 ## Transcript
-:::{.callout-warning appearance="simple"}
+<!-- :::{.callout-warning appearance="simple"}
 This transcript has been produced using [speech-to-text transcription software](https://otter.ai/). It has been only lightly edited to correct mistranscriptions and remove repetitions. 
-:::
+::: -->
+Coming soon...
 
-**Speaker**
+<!-- **Speaker**
 Text -->
 
 ###### **&larr; Back to [Editors' blog](/news-and-views/editors-blog/index.qmd)**
