replace url with URL

--- a/news-and-views/datasciencebites/posts/2023/03/02/basket-complementarity.qmd
+++ b/news-and-views/datasciencebites/posts/2023/03/02/basket-complementarity.qmd
@@ -82,7 +82,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Bhaduri, Moinak. 2023. "Using ‘basket complementarity’ to make product recommendations." Real World Data Science, March 2, 2023. https://realworlddatascience.net/news-and-views/datasciencebites/posts/2023/03/02/basket-complementarity.html
+: Bhaduri, Moinak. 2023. "Using ‘basket complementarity’ to make product recommendations." Real World Data Science, March 2, 2023. [URL](https://realworlddatascience.net/news-and-views/datasciencebites/posts/2023/03/02/basket-complementarity.html)
 :::
 :::
 :::
