--- a/index.qmd
+++ b/index.qmd
@@ -32,7 +32,7 @@ listing:
 toc: false
 ---
 ::: {.header-banner .header-image}
-![](header-image.png)
+![](images/nasa-Q1p7bh3SHj8-unsplash-crop.png)
 :::
 
 ::: {.header-text} 
@@ -120,5 +120,43 @@ Main body copy goes here Main body copy goes here Main body copy goes here Main 
 ::: {.bannerad-text}
 ::: {.bannerad-block .alt-background}
 Banner ad goes here
+:::
+:::
+
+::: {.footer-text}
+::: {.footer-background}
+::: {.content-block .footer-background}
+::: grid
+
+
+::: {.g-col-12 .g-col-md-6}
+![](images/rss-logo-footer.png)
+:::
+::: {.g-col-12 .g-col-md-2}
+### Header 1
+Test\
+Test\
+Test\
+:::
+::: {.g-col-12 .g-col-md-2}
+### Header 2
+Test\
+Test\
+Test\
+:::
+::: {.g-col-12 .g-col-md-2}
+### Header 3
+Test\
+Test\
+Test\
+:::
+
+::: {.g-col-12 .g-col-md-12}
+### Our partners
+images to go here
+:::
+
+:::
+:::
 :::
 :::
