image, section header added

--- a/news-and-views/editors-blog/posts/2023/03/15/AI-screening.qmd
+++ b/news-and-views/editors-blog/posts/2023/03/15/AI-screening.qmd
@@ -10,8 +10,8 @@ categories:
 author: Brian Tarran
 date: 03/15/2023
 toc: true
-# image: 
-# image-alt:
+image: images/teacher-marking-homework.png
+image-alt: A teacher is marking homework and trying to decide whether a written piece of text has been created by a student or by a large language model, digital art. Created by DALL·E, prompt by Real World Data Science.
 ---
 When ChatGPT launched in December 2022, it wasn't long before users highlighted [the tool's potential as a homework aid](https://news.sky.com/story/the-ultimate-homework-cheat-how-teachers-are-facing-up-to-chatgpt-12780601). Pop an essay question into ChatGPT's prompt box or feed your creative writing task to the AI instead, *et voila* -- your work is done!
 
@@ -106,10 +106,11 @@ Yet another survey, [this one from Intelligent.com](https://www.prweb.com/releas
 ![](images/fig3b.png){fig-alt="Horizontal stacked bar chart showing test results as a percentage of all positive tests,  assuming 30% prevalence of AI-written homework" fig-align="center"}
 
 ::: {.column-margin}
-**Figure 3b:** Classifier test results as a percentage of all positive tests,  assuming 30% prevalence of AI-written homework.
+**Figure 3b:** Classifier test results as a percentage of all positive tests, assuming 30% prevalence of AI-written homework.
 :::
 
-This is an improvement, for sure. But is “slightly better than 50/50” a reasonable basis on which to accuse someone of getting ChatGPT to do their homework? That depends on who you ask. If we look to the legal system for guidance, in civil cases like personal injury claims or contact disputes judges typically make decisions on the so-called “balance of probabilities”. This is generally assumed to mean if we are more than 50% sure of someone’s “guilt” in this context, that might be sufficient to find against them. However, in criminal law, a higher standard applies: “beyond reasonable doubt”. Legal scholars have long wrestled with how to quantify this in probabilistic terms, and surveys of judges put “beyond reasonable doubt” somewhere in the range of being 80% to 99% certain of guilt. 
+## Determining 'guilt'
+If a test has a positive predictive value of just over 50% (at an assumed prevalence rate of 30%), does that provide a reasonable basis on which to accuse someone of getting ChatGPT to do their homework? That depends on who you ask. If we look to the legal system for guidance, in civil cases like personal injury claims or contact disputes judges typically make decisions on the so-called “balance of probabilities”. This is generally assumed to mean if we are more than 50% sure of someone’s “guilt” in this context, that might be sufficient to find against them. However, in criminal law, a higher standard applies: “beyond reasonable doubt”. Legal scholars have long wrestled with how to quantify this in probabilistic terms, and surveys of judges put “beyond reasonable doubt” somewhere in the range of being 80% to 99% certain of guilt. 
 
 It is at this standard of evidence that OpenAI's classifier shows its limitations. For example, if we flip Bayes’ theorem around, we find that to achieve a positive predictive value of at least 80%, the prevalence rate needs to be at least 58%. For a positive predictive value of 90%, prevalence needs to be 76%. (Verify these figures for yourself: Python code and functions are available from this [GitHub repository](https://github.com/fatso-jetson/screening-tests)).
 
