--- a/news-and-views/editors-blog/posts/2023/03/15/AI-screening.qmd
+++ b/news-and-views/editors-blog/posts/2023/03/15/AI-screening.qmd
@@ -122,7 +122,9 @@ Looked at in this way, Matthews says, "You already have to be pretty convinced o
 
 So, here's a question that teachers will be asking if they are worried about ChatGPT-generated homework: "Has the piece of text I'm marking been written by AI?" If those same teachers use the OpenAI classifier to try to answer that question, they will no doubt expect that something classified as "likely AI-written" is more likely to be AI-written than not. However, as it stands now -- and as our examples above have shown -- users can't be confident that's the case. In education terms, this particular 'test' is a long way from scoring top marks.
 
-###### **&larr; Back to [Editors' blog](/news-and-views/editors-blog/index.qmd)**
+::: {.article-btn}
+[Back to Editors' blog](/news-and-views/editors-blog/index.qmd)
+:::
 
 ::: {.further-info}
 ::: grid
