--- a/news-and-views/editors-blog/posts/2023/02/14/digital-skills.qmd
+++ b/news-and-views/editors-blog/posts/2023/02/14/digital-skills.qmd
@@ -57,7 +57,9 @@ But how would *you* close the “digital skills” gap, if given the chance?
 Is there a recent data science story you'd like our team to discuss? Do you have your own thoughts to share on a hot topic, or a burning question to put to the community? If so, either comment below or [contact us](/contact.qmd).
 :::
 
-###### **&larr; Back to [Editors' blog](/news-and-views/editors-blog/index.qmd)**
+::: {.article-btn}
+[Back to Editors' blog](/news-and-views/editors-blog/index.qmd)
+:::
 
 ---
 <p xmlns:cc="http://creativecommons.org/ns#" >This work is licensed under <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a></p>
