--- a/news-and-views/editors-blog/posts/2023/01/18/rwds-at-rss-conference.qmd
+++ b/news-and-views/editors-blog/posts/2023/01/18/rwds-at-rss-conference.qmd
@@ -26,7 +26,9 @@ The conference takes place 4-7 September 2023, in Harrogate, Yorkshire. [Keynote
 
 See the [RSS International Conference 2023 website](https://rss.org.uk/training-events/conference-2023/) for more details.
 
-###### **&larr; Back to [Editors' blog](/news-and-views/editors-blog/index.qmd)**
+::: {.article-btn}
+[Back to Editors' blog](/news-and-views/editors-blog/index.qmd)
+:::
 
 ---
 <p xmlns:cc="http://creativecommons.org/ns#" >This work is licensed under <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a></p>
