footer content added

--- a/index.qmd
+++ b/index.qmd
@@ -85,31 +85,31 @@ Banner ad goes here
 
 
 ::: {.g-col-12 .g-col-md-6}
-![](images/rss-logo-footer.png)
+[![](images/rss-logo-footer.png)](https://rss.org.uk/)
 :::
 ::: {.g-col-12 .g-col-md-2}
-### Header 1
+### About us
+[Our aims](about-rwds.qmd)\
+[Our team](/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.html)\
+Our partners
+:::
+::: {.g-col-12 .g-col-md-2}
+### Write for us
 Test\
 Test\
 Test\
 :::
 ::: {.g-col-12 .g-col-md-2}
-### Header 2
-Test\
-Test\
-Test\
-:::
-::: {.g-col-12 .g-col-md-2}
-### Header 3
+### Follow us
 Test\
 Test\
 Test\
 :::
 
-::: {.g-col-12 .g-col-md-12}
+<!-- ::: {.g-col-12 .g-col-md-12}
 ### Our partners
-images to go here
-:::
+logos to go here
+::: -->
 
 :::
 :::
