test gitignore for images

--- a/index.qmd
+++ b/index.qmd
@@ -94,10 +94,10 @@ Banner ad goes here
 Our partners
 :::
 ::: {.g-col-12 .g-col-md-2}
-### Write for us
-Test\
-Test\
-Test\
+### Contribute
+[Call for contributions](\contributor-docs\call-for-contributions.qmd)\
+[Contributor guidelines](\contributor-docs\contributor-guidelines.qmd)\
+[Style guide](\contributor-docs\style-guide.qmd)
 :::
 ::: {.g-col-12 .g-col-md-2}
 ### Follow us
