--- a/index.qmd
+++ b/index.qmd
@@ -101,9 +101,10 @@ Our partners
 :::
 ::: {.g-col-12 .g-col-md-2}
 ### Follow us
-Test\
-Test\
-Test\
+[GitHub](https://github.com/realworlddatascience)
+[Twitter](https://twitter.com/rwdatasci)
+[LinkedIn](https://www.linkedin.com/showcase/rss-real-world-data-science)
+[Mastodon](https://fosstodon.org/@rwdatasci)
 :::
 
 <!-- ::: {.g-col-12 .g-col-md-12}
