update to contrib docs and sidebars

--- a/about-rwds.qmd
+++ b/about-rwds.qmd
@@ -1,7 +1,6 @@
 ---
 title: "Welcome to Real World Data Science"
-description: | 
-  A showcase for data science in action.
+subtitle: A showcase for data science in action
 sidebar: false
 toc: false
 title-block-banner: true
