--- a/contributor-docs/case-studies.qmd
+++ b/contributor-docs/case-studies.qmd
@@ -6,12 +6,12 @@ subtitle: "Notes for contributors"
 
 A good case study will be a source of information, insight and inspiration for each of our target audiences: 
 
-* *Practitioners* will learn from their peers – whether by seeing new techniques applied to common problems, or familiar techniques adapted to unique challenges. 
+* *Practitioners* will learn from their peers -- whether by seeing new techniques applied to common problems, or familiar techniques adapted to unique challenges. 
 * *Leaders* will see how different data science teams work, the mix of skills and experience in play, and how the components of the data science process fit together. 
 * *Students* will enrich their understanding of how data science is applied, how data scientists operate, and what skills they need to hone to succeed in the workplace.    
 
 ## Structure
-Case studies should follow the structure below. It is not necessary to use the section headings we have provided – creativity and variety are encouraged. However, the areas outlined under each section heading should be covered in all submissions. 
+Case studies should follow the structure below. It is not necessary to use the section headings we have provided -- creativity and variety are encouraged. However, the areas outlined under each section heading should be covered in all submissions. 
 
 * The problem/challenge 
   : Summarise the project and its relevance to your organisation’s needs, aims and ambitions. 
@@ -39,7 +39,7 @@ Case studies should follow the structure below. It is not necessary to use the s
 
 *Goals can be defined quite broadly.* There’s no expectation that you set out your organisation’s short- or long-term targets. Instead, audiences need to know enough about what you want to do so they can understand what motivates your choice of approach. 
 
-*Use toy examples and synthetic data to good effect.* We understand that – whether for commercial, legal or ethical reasons – it can be difficult or impossible to share real data in your case studies, or to describe the actual outputs of your work. However, there are many ways to share learnings and insights without divulging sensitive information. [This blog post from Lyft](https://eng.lyft.com/causal-forecasting-at-lyft-part-1-14cca6ff3d6d) uses hypotheticals, mathematical notation and synthetic data to explain the company’s approach to causal forecasting without revealing actual KPIs or data. 
+*Use toy examples and synthetic data to good effect.* We understand that -- whether for commercial, legal or ethical reasons -- it can be difficult or impossible to share real data in your case studies, or to describe the actual outputs of your work. However, there are many ways to share learnings and insights without divulging sensitive information. [This blog post from Lyft](https://eng.lyft.com/causal-forecasting-at-lyft-part-1-14cca6ff3d6d) uses hypotheticals, mathematical notation and synthetic data to explain the company’s approach to causal forecasting without revealing actual KPIs or data. 
 
 *People like to experiment, so encourage them to do so.* Our platform allows you to embed code and to link that code to interactive coding environments like [Google Colab](https://colab.research.google.com/). So if, for example, you want to explain a technique like [bootstrapping](https://rss.onlinelibrary.wiley.com/doi/10.1111/j.1740-9713.2019.01225.x), why not provide a code block so that audiences can run a bootstrapping simulation themselves. 
 
