--- a/contributor-docs/contributor-guidelines.qmd
+++ b/contributor-docs/contributor-guidelines.qmd
@@ -6,13 +6,13 @@ Thank you for your interest in contributing to Real World Data Science. This pag
 ## Site functionality and ethos
 Real World Data Science is built on [Quarto](https://quarto.org/), the new open-source publishing system developed by [Posit](https://posit.co/). The site has been designed from the ground up as a platform for data scientists, created by data scientists. Here’s what this means in practice:  
 
-* **Contributors can use data science software and tools to create content** – e.g. Visual Studio Code, RStudio, Jupyter Lab; Python, R, Observable, and Shiny – allowing for the full integration of text, code, figures, equations, and other elements. 
+* **Contributors can use data science software and tools to create content** -- e.g. Visual Studio Code, RStudio, Jupyter Lab; Python, R, Observable, and Shiny -- allowing for the full integration of text, code, figures, equations, and other elements. 
 
-* **Review and editing are transparent and collaborative**, again making use of tools data scientists are familiar with – e.g. GitHub, Google Docs – for sharing and revising documents prior to publication. 
+* **Review and editing are transparent and collaborative**, again making use of tools data scientists are familiar with -- e.g. GitHub, Google Docs -- for sharing and revising documents prior to publication. 
 
 * **Content can be both engaging *and* interactive.** Many data scientists learn by doing, so code can be made available as R Markdown or Jupyter Notebook files to be reused and experimented with offline. Or, the same documents can be used online through tools like Google Colab and Binder. Where appropriate, the use of interactive displays and Shiny apps is encouraged, allowing for data visualisations to be interrogated and regenerated on the fly.  
 
-* **Site users are contributors too.** Through annotation and commenting functionality, site users can interact and converse with authors and other members of the Real World Data Science community. And with all source files hosted on GitHub, users of our site can raise issues, or fork and propose improvements – leading to a true exchange of knowledge. 
+* **Site users are contributors too.** Through annotation and commenting functionality, site users can interact and converse with authors and other members of the Real World Data Science community. And with all source files hosted on GitHub, users of our site can raise issues, or fork and propose improvements -- leading to a true exchange of knowledge. 
 
 ## The submission process
 1. Contact site editor [Brian Tarran](mailto:b.tarran@rss.org.uk) to discuss your proposed submission.
@@ -42,8 +42,8 @@ Draft submissions will be shared for review with members of the Real World Data 
 Once revisions are complete and content is accepted for publication, authors will be provided with HTML files to preview published content. Following sign-off by author and editor, HTML files will be made live.
 
 ## Post-publication
-Contributors and editors will work together to promote content via social media platforms – Twitter, LinkedIn, blogs – and in other channels as appropriate – e.g., in response to related questions on Quora or Stack Overflow. 
+Contributors and editors will work together to promote content via social media platforms -- Twitter, LinkedIn, blogs -- and in other channels as appropriate -- e.g., in response to related questions on Quora or Stack Overflow. 
 
-Contributors are encouraged to monitor their content regularly for user comments and discussions. Engaging in discussions with users – whether through the Real World Data Science platform or via social media and other channels – is an effective way of developing an audience: it builds profile for the contributor and their content, and encourages other users to find and interact with content. 
+Contributors are encouraged to monitor their content regularly for user comments and discussions. Engaging in discussions with users -- whether through the Real World Data Science platform or via social media and other channels -- is an effective way of developing an audience: it builds profile for the contributor and their content, and encourages other users to find and interact with content. 
 
 <!-- Real World Data Science will also promote new content regularly via a newsletter, which users of the platform can sign up to receive. We will also look to partner with other newsletter publishers so that Real World Data Science content is featured within their mailings. -->
