--- a/contributor-docs/datasciencebites.qmd
+++ b/contributor-docs/datasciencebites.qmd
@@ -29,11 +29,11 @@ We welcome contributions from graduate students and early career researchers in 
 
 ## Word count target 
 
-500–1,000 words. 
+500--1,000 words. 
 
 ## Two ways of contributing 
 
-* **Regular contributors** commit to publishing an agreed number of posts (6–12) each year. Regular contributors will collaborate closely with editors on the development of the blog,  and experienced contributors will be invited to support and mentor new regular contributors to help grow the DataScienceBites team. 
+* **Regular contributors** commit to publishing an agreed number of posts (6--12) each year. Regular contributors will collaborate closely with editors on the development of the blog,  and experienced contributors will be invited to support and mentor new regular contributors to help grow the DataScienceBites team. 
  
 * **Guest contributors** make one-off or ad hoc contributions to the site. Proposals are to be submitted in the form of a [content brief](contributor-guidelines.html#the-submission-process). 
 
