--- a/contributor-docs/datasets.qmd
+++ b/contributor-docs/datasets.qmd
@@ -4,7 +4,7 @@ subtitle: "Notes for contributors"
 ---
 It’s easy to find datasets online. What’s more difficult is finding *quality* datasets that are suitable for *specific* training and development needs. On Real World Data Science we aim to solve that problem. 
 
-Our **Datasets** section will provide a curated list of recommended datasets along with detailed notes and guidance on what each dataset contains, how it is structured, and how best to make use of it. In particular, we want to highlight messy rather than pristine datasets – ones that capture the imperfections and oddities found in real-world data – so that users can practice not only data analysis and modelling, but data cleaning and preparation too! 
+Our **Datasets** section will provide a curated list of recommended datasets along with detailed notes and guidance on what each dataset contains, how it is structured, and how best to make use of it. In particular, we want to highlight messy rather than pristine datasets -- ones that capture the imperfections and oddities found in real-world data -- so that users can practice not only data analysis and modelling, but data cleaning and preparation too! 
 
 ## Structure
 If you have a dataset to recommend, your submission must cover the following areas: 
