--- a/contributor-docs/style-guide.qmd
+++ b/contributor-docs/style-guide.qmd
@@ -31,7 +31,7 @@ Contributors must include within their submissions any links and/or references t
 Citations are to be formatted in [The Chicago Manual of Style](https://www.chicagomanualofstyle.org/tools_citationguide/citation-guide-2.html) author-date format. 
 
 ## Use of images 
-Images for general illustration purposes will be sourced and – where necessary and within reason – paid for by Real World Data Science. 
+Images for general illustration purposes will be sourced and -- where necessary and within reason -- paid for by Real World Data Science. 
 
 <!-- Word counts 
 [To be completed at a later date, ideally once sample articles have been commissioned and accepted for publication.] --> 
