--- a/contributor-docs/training-guides.qmd
+++ b/contributor-docs/training-guides.qmd
@@ -10,7 +10,7 @@ But it can be time-consuming to figure out what you need to learn and in what or
 
 Contributors should think about their training guides as being short online courses that are constructed from existing high-quality material. You do not need to create your own “course” content. Rather, you should focus on recommending texts and other material for users to follow in a logical ordered way, so that they may build up and secure their knowledge of a particular topic. 
 
-Guides should feature a mix of content types – not only text, but audio and video – and they should provide ample opportunities for users to practice what they are learning.  
+Guides should feature a mix of content types -- not only text, but audio and video -- and they should provide ample opportunities for users to practice what they are learning.  
 
 A brief and extremely simplified example of a guide is as follows: 
 
@@ -30,6 +30,6 @@ A brief and extremely simplified example of a guide is as follows:
 
 *Be mindful of different learning styles.* Some people prefer to read, others prefer to watch or listen. So, wherever possible, for each stage of your training guide, try to provide a mix of resources that meet the same learning objectives. 
 
-*Consider barriers to entry.* Data scientists in large organisations may have access to training budgets or mechanisms to apply for training funds. But that isn’t the case for all data scientists, meaning that paid-for materials and training courses might not be accessible to everyone. Recommend them sparingly, and if there are ways to access the material at reduced rates do let users know. However, you must not link to illicit copies of material – e.g., unauthorised PDF reproductions of textbooks.  
+*Consider barriers to entry.* Data scientists in large organisations may have access to training budgets or mechanisms to apply for training funds. But that isn’t the case for all data scientists, meaning that paid-for materials and training courses might not be accessible to everyone. Recommend them sparingly, and if there are ways to access the material at reduced rates do let users know. However, you must not link to illicit copies of material -- e.g., unauthorised PDF reproductions of textbooks.  
 
 *If there are resource gaps, please tell us.* While planning out your training guide, you may well struggle to find the perfect piece of content to recommend at a particular stage of your learning journey. If that is the case, do get in touch with us. One of the goals of Real World Data Science is to identify and plug these sorts of gaps, so that all in the data science community can benefit. We’ll sketch out a commission and take it out to our network of contacts. Or perhaps it’ll be something you want to create for the site!
