--- a/index.qmd
+++ b/index.qmd
@@ -91,7 +91,7 @@ Banner ad goes here
 ### About us
 [Our aims](about-rwds.qmd)\
 [Our team](/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.html)\
-Our partners
+[Partners and funders](rwds-partners.qmd)
 :::
 ::: {.g-col-12 .g-col-md-2}
 ### Contribute
