--- a/contributor-docs/recommender.qmd
+++ b/contributor-docs/recommender.qmd
@@ -2,7 +2,7 @@
 title: "Recommenders"
 subtitle: "Notes for contributors"
 ---
-Too much content, not enough time. That about sums up the problem facing the data science community. So, our **Recommenders** are here to help. Contributors are invited to submit lists (or **Feeds**) of high-quality sources on all manner of topics – from foundational ideas in data science and cutting-edge techniques, to opinion and thought-leadership on the future of the profession. **Reviews** of new books and other material are also welcome. 
+Too much content, not enough time. That about sums up the problem facing the data science community. So, our **Recommenders** are here to help. Contributors are invited to submit lists (or **Feeds**) of high-quality sources on all manner of topics -- from foundational ideas in data science and cutting-edge techniques, to opinion and thought-leadership on the future of the profession. **Reviews** of new books and other material are also welcome. 
 
 ## Article types and structures 
 
@@ -36,8 +36,8 @@ All reviews should list the following information (if relevant):
 
 ## Advice and recommendations 
 
-*Keep lists to a sensible size.* Feeds are meant to help data scientists to prioritise who and what to follow based on their interests and career stage – and it is much easier to keep tabs on 5 sources than it is 50, or even 15! So, the fewer the better. 
+*Keep lists to a sensible size.* Feeds are meant to help data scientists to prioritise who and what to follow based on their interests and career stage -- and it is much easier to keep tabs on 5 sources than it is 50, or even 15! So, the fewer the better. 
 
-*Keep your recommendations up to date.* In this era of digital publishing, things can and do change overnight. So, if one of your recommended bloggers stops blogging, or the author of one of your favourite books makes a major update to the text, do be sure to let us – and your audience – know. We want to keep feeds and reviews current and useful. 
+*Keep your recommendations up to date.* In this era of digital publishing, things can and do change overnight. So, if one of your recommended bloggers stops blogging, or the author of one of your favourite books makes a major update to the text, do be sure to let us -- and your audience -- know. We want to keep feeds and reviews current and useful. 
 
 *Of course you are brilliant, but...* Please do not recommend or review your own publications or those in which you have a pecuniary or similar interest. 
