T&Cs added and bottom nav complete

--- a/index.qmd
+++ b/index.qmd
@@ -101,10 +101,10 @@ Banner ad goes here
 :::
 ::: {.g-col-12 .g-col-md-2}
 ### Follow us
-[GitHub](https://github.com/realworlddatascience)
-[Twitter](https://twitter.com/rwdatasci)
-[LinkedIn](https://www.linkedin.com/showcase/rss-real-world-data-science)
-[Mastodon](https://fosstodon.org/@rwdatasci)
+[GitHub](https://github.com/realworlddatascience)\
+[Twitter](https://twitter.com/rwdatasci)\
+[LinkedIn](https://www.linkedin.com/showcase/rss-real-world-data-science)\
+[Mastodon](https://fosstodon.org/@rwdatasci)\
 :::
 
 <!-- ::: {.g-col-12 .g-col-md-12}
