--- a/index.qmd
+++ b/index.qmd
@@ -7,9 +7,9 @@ sidebar: false
 listing:
   - id: latest-content
     contents: 
-    - /news-and-views/editors-blog
-    - /news-and-views/datasciencebites
-    - /news-and-views/interviews
+    - /viewpoints/editors-blog
+    - /ideas/datasciencebites
+    - /viewpoints/interviews
     - "!index.qmd"
     sort: "date desc"
     type: default
@@ -20,7 +20,7 @@ listing:
     feed: false
   - id: interviews
     contents: 
-    - /news-and-views/interviews
+    - /viewpoints/interviews
     - "!index.qmd"
     sort: "date desc"
     type: grid
