fixed image scaling and added pagetitles

--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-pagetitle: "Home"
+pagetitle: "Real World Data Science"
 page-layout: custom
 section-divs: false
 editor: source
@@ -12,7 +12,7 @@ listing:
     - /viewpoints/interviews
     - "!index.qmd"
     sort: "date desc"
-    type: default
+    type: grid
     categories: false
     sort-ui: false
     filter-ui: false
