--- a/viewpoints/index.qmd
+++ b/viewpoints/index.qmd
@@ -1,4 +1,5 @@
 ---
+pagetitle: Viewpoints | Real World Data Science
 title: Viewpoints
 subtitle: Critical perspectives on the stories, themes, challenges and opportunities shaping data science  
 listing:
