--- a/viewpoints/interviews/index.qmd
+++ b/viewpoints/interviews/index.qmd
@@ -1,4 +1,5 @@
 ---
+pagetitle: Interviews | Real World Data Science
 title: Interviews
 subtitle: Deep dives with data scientists on hot topics and burning issues
 listing:
