--- a/viewpoints/editors-blog/index.qmd
+++ b/viewpoints/editors-blog/index.qmd
@@ -1,4 +1,5 @@
 ---
+pagetitle: Editors' Blog | Real World Data Science
 title: Editors' blog
 subtitle: News, updates, and discussions from the Editorial Board
 listing:
