--- a/viewpoints/newsletter/index.qmd
+++ b/viewpoints/newsletter/index.qmd
@@ -1,4 +1,5 @@
 ---
+pagetitle: Newsletter | Real World Data Science
 title: "Industrial Strength Data Science"
 subtitle: The newsletter of the Royal Statistical Society's Data Science & AI Section
 description: |
