--- a/viewpoints/index.qmd
+++ b/viewpoints/index.qmd
@@ -8,11 +8,10 @@ listing:
   - interviews
   - "!index.qmd"
   sort: "date desc"
-  type: default
-  categories: true
+  type: grid
+  categories: false
   sort-ui: false
   filter-ui: false
   page-size: 10
   feed: true
 ---
-
