--- a/index.qmd
+++ b/index.qmd
@@ -36,45 +36,44 @@ toc: false
 :::
 
 ::: {.header-text} 
+::: {.content-container}
 ::: {.header-block}
 Welcome to the home of **Real World Data Science**, a new project from the [Royal Statistical Society](https://rss.org.uk/). This site and its content are being created and curated by data science practitioners and leaders with a single goal in mind: to help you deliver high quality, ethical, impactful data science in your workplace.
 :::
 :::
+:::
 
-::: {.article-block}
+::: {.content-container}
+::: {.listing-block}
 ## Latest content 
 
 ::: {#latest-content}
 :::
 
 :::
+:::
 
 ::: {.pullout-text}
-::: {.pullout-block .alt-background}
-## Hello hello.
-
-This is the place where we can include pullquotes, etc. from articles and make them standout.
-
-We could also add buttons here to click through to articles.
+::: {.pullout-container}
+::: {.pullout-block .black-background}
+## It is arbitrary how we choose to model a situation. There are infinitely many different ways that you could choose to simplify reality -- this huge, messy, complex thing in front of us
+Erica Thompson on how to *Escape from Model Land*
 
 ::: {.button .button1}
-READ MORE
+[Watch the interview](viewpoints/interviews/posts/01/25/erica-thompson.qmd)
 :::
 
 :::
 :::
+:::
 
-::: {.article-block}
+::: {.content-container}
+::: {.listing-block}
 ## Interviews 
 
 ::: {#interviews}
 :::
 
-:::
-
-::: {.bannerad-text}
-::: {.bannerad-block .alt-background}
-Banner ad goes here
 :::
 :::
 
