homepage styling and viewpoints nav complete

--- a/index.qmd
+++ b/index.qmd
@@ -7,9 +7,10 @@ sidebar: false
 listing:
   - id: latest-content
     contents: 
-    - /viewpoints/editors-blog
-    - /ideas/datasciencebites
-    - /viewpoints/interviews
+    - /case-studies
+    - /ideas
+    - /careers
+    - /viewpoints
     - "!index.qmd"
     sort: "date desc"
     type: grid
@@ -18,6 +19,78 @@ listing:
     filter-ui: false
     max-items: 3
     feed: false
+
+  # - id: case-studies
+  #   contents: 
+  #   - /case-studies
+  #   - "!index.qmd"
+  #   sort: "date desc"
+  #   type: grid
+  #   categories: false
+  #   sort-ui: false
+  #   filter-ui: false
+  #   max-items: 3
+  #   feed: false
+
+  # - id: ideas
+  #   contents: 
+  #   - /ideas
+  #   - "!index.qmd"
+  #   sort: "date desc"
+  #   type: grid
+  #   categories: false
+  #   sort-ui: false
+  #   filter-ui: false
+  #   max-items: 3
+  #   feed: false
+
+  # - id: careers
+  #   contents: 
+  #   - /careers
+  #   - "!index.qmd"
+  #   sort: "date desc"
+  #   type: grid
+  #   categories: false
+  #   sort-ui: false
+  #   filter-ui: false
+  #   max-items: 3
+  #   feed: false
+
+  # - id: viewpoints
+  #   contents: 
+  #   - /viewpoints
+  #   sort: "date desc"
+  #   type: grid
+  #   categories: false
+  #   sort-ui: false
+  #   filter-ui: false
+  #   max-items: 3
+  #   feed: false
+
+  - id: editors-blog
+    contents: 
+    - /viewpoints/editors-blog
+    - "!index.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
+
+  - id: datasciencebites
+    contents: 
+    - /ideas/datasciencebites
+    - "!index.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
+
   - id: interviews
     contents: 
     - /viewpoints/interviews
@@ -31,6 +104,7 @@ listing:
     feed: false
 toc: false
 ---
+
 ::: {.header-banner .header-image}
 ![](images/nasa-Q1p7bh3SHj8-unsplash-crop.png)
 :::
@@ -56,6 +130,8 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ::: {.pullout-text}
 ::: {.pullout-container}
 ::: {.pullout-block .black-background}
+![](images/quote-purple.png){width="100px"}
+
 ## It is arbitrary how we choose to model a situation. There are infinitely many different ways that you could choose to simplify reality -- this huge, messy, complex thing in front of us
 Erica Thompson on how to *Escape from Model Land*
 
@@ -64,6 +140,26 @@ Erica Thompson on how to *Escape from Model Land*
 :::
 
 :::
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
+## Data Science Bites 
+
+::: {#datasciencebites}
+:::
+
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
+## Editors' Blog 
+
+::: {#editors-blog}
+:::
+
 :::
 :::
 
@@ -78,8 +174,8 @@ Erica Thompson on how to *Escape from Model Land*
 :::
 
 ::: {.footer-text}
-::: {.footer-background}
-::: {.content-block .footer-background}
+::: {.footer-container .black-background}
+::: {.footer-block}
 ::: grid
 
 
