repoint and rename meet the team

--- a/index.qmd
+++ b/index.qmd
@@ -180,13 +180,15 @@ Erica Thompson on how to *Escape from Model Land*
 
 
 ::: {.g-col-12 .g-col-md-6}
+### Published by
 [![](images/rss-logo-footer.png)](https://rss.org.uk/)
 :::
 ::: {.g-col-12 .g-col-md-2}
 ### About us
 [Our aims](about-rwds.qmd)\
-[Our team](/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.html)\
-[Partners and funders](rwds-partners.qmd)
+[Our team](/viewpoints/editors-blog/posts/2022/10/18/meet-the-team.qmd)\
+[Partners and funders](rwds-partners.qmd)\
+[Contact us](contact.qmd)
 :::
 ::: {.g-col-12 .g-col-md-2}
 ### Contribute
