Add About RWDS menu

--- a/about-rwds.qmd
+++ b/about-rwds.qmd
@@ -2,6 +2,7 @@
 title: "Welcome to Real World Data Science"
 subtitle: A showcase for data science in action
 sidebar: false
+page-layout: article
 toc: false
 title-block-banner: true
 ---
