--- a/ts-and-cs.qmd
+++ b/ts-and-cs.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Terms and conditions"
 subtitle: Coming soon
+page-layout: article
 sidebar: false
 toc: false
 title-block-banner: true
