--- a/viewpoints/editors-blog/posts/2022/11/23/LLM-content-warning.qmd
+++ b/viewpoints/editors-blog/posts/2022/11/23/LLM-content-warning.qmd
@@ -11,6 +11,8 @@ date: 11/23/2022
 toc: true
 image: images/TeresaBerndtsson-LetterWord-Text-Taxonomy-1000x1333.jpg
 image-alt: A black keyboard at the bottom of the picture has an open book on it, with red words in labels floating on top, with a letter A balanced on top of them. The perspective makes the composition form a kind of triangle from the keyboard to the capital A. The AI filter makes it look like a messy, with a kind of cartoon style.
+aliases: 
+  - /news-and-views/editors-blog/posts/2022-11-23-LLMs-content-warning/LLM-content-warning.html
 ---
 Anyone who has ever been set a writing task will probably have wished at some point that somebody else could write it for them. As a journalist of 20-plus years, the thought has certainly crossed my mind more than a few times. Which probably explains why a recent headline in Nature caught my attention: [“Could AI help you to write your next paper?”](https://www.nature.com/articles/d41586-022-03479-w) 
 
