repoint LLM news and Chat with Chat GPT

--- a/viewpoints/editors-blog/posts/2022/12/09/A-chat-with-ChatGPT.qmd
+++ b/viewpoints/editors-blog/posts/2022/12/09/A-chat-with-ChatGPT.qmd
@@ -10,7 +10,9 @@ author: Brian Tarran
 date: 12/09/2022
 toc: true
 image: images/chatgpt1.png
-image-alt: A screenshot of an exchange between Real World Data Science editor Brian Tarran and ChatGPT. 
+image-alt: A screenshot of an exchange between Real World Data Science editor Brian Tarran and ChatGPT.
+aliases: 
+  - /news-and-views/editors-blog/posts/2022-12-09-LLM-news/A-chat-with-ChatGPT.html 
 ---
 ::: {.column-margin}
 ###### Screenshots
