--- a/viewpoints/editors-blog/posts/2022/12/09/LLM-news.qmd
+++ b/viewpoints/editors-blog/posts/2022/12/09/LLM-news.qmd
@@ -11,6 +11,8 @@ date: 12/09/2022
 toc: true
 image: images/jigsaw-words.jpg
 image-alt: An image created by the Stable Diffusion 2.1 Demo. The model was asked to produce an image with the prompt, 'Text from an old book cut up like a jigsaw puzzle with pieces missing'.
+aliases: 
+  - /news-and-views/editors-blog/posts/2022-12-09-LLM-news/LLM-news.html
 ---
 Two weeks ago, I posted a [Q&A with our editorial board member Detlef Nauck about large language models](/news-and-views/editors-blog/posts/2022-11-23-LLMs-content-warning/LLM-content-warning.qmd) (LLMs), their drawbacks and risks. And since then we’ve had several big new announcements in this space. First came news from Meta (the company that owns Facebook) about [Galactica, an LLM trained on scientific papers](https://galactica.org/mission/). This was followed by another Meta announcement, about [Cicero](https://ai.facebook.com/research/cicero/), an AI agent that is apparently very good at playing the game Diplomacy. And then came perhaps the biggest launch of them all: [ChatGPT from OpenAI](https://openai.com/blog/chatgpt/), an LLM-based chatbot that millions of people have already started talking to. 
 
