repoint DSB launch post

--- a/viewpoints/editors-blog/posts/2022/12/13/dsb-launch.qmd
+++ b/viewpoints/editors-blog/posts/2022/12/13/dsb-launch.qmd
@@ -10,7 +10,9 @@ author: Brian Tarran
 date: 12/13/2022
 toc: true
 image: images/datasciencebites-logo.png
-image-alt: DataScienceBites logo. A dark grey circle with bite marks cut out. Overlaid text says, Import grad_students as writers, import new_research_papers as nrp, print(writers + nrp) and the title DataScienceBites.   
+image-alt: DataScienceBites logo. A dark grey circle with bite marks cut out. Overlaid text says, Import grad_students as writers, import new_research_papers as nrp, print(writers + nrp) and the title DataScienceBites.
+aliases: 
+  - /news-and-views/editors-blog/posts/2022-12-13-dsb-launch/dsb-launch.html   
 ---
 I’m absolutely thrilled today to announce the launch of our new blog, [DataScienceBites](/news-and-views/datasciencebites/index.qmd). The blog is not only a new addition to Real World Data Science, but also the latest proud member of the ScienceBites family of sites. 
 
