created aliases for DSB

--- a/ideas/datasciencebites/posts/2022/12/13/ridesharing.qmd
+++ b/ideas/datasciencebites/posts/2022/12/13/ridesharing.qmd
@@ -13,6 +13,7 @@ image-alt: Photo taken from the backseat of a Lyft vehicle. Driver is seen in pr
 toc: true
 aliases: 
   - /news-and-views/datasciencebites/posts/2022-12-13-ridesharing/ridesharing.html
+  - /news-and-views/datasciencebites/posts/2022/12/13/ridesharing.html
 ---
 :::{.callout-note collapse="false"}
 ## About the paper and this post
