--- a/ideas/datasciencebites/posts/2023/03/02/basket-complementarity.qmd
+++ b/ideas/datasciencebites/posts/2023/03/02/basket-complementarity.qmd
@@ -10,8 +10,9 @@ author: Moinak Bhaduri
 date: 03/02/2023
 image: images/marjan-blan-marjanblan-3nURJV_L7-8-unsplash.jpg
 image-alt: A shopping trolley being pushed around a supermarket. Photo by Marjan Blan | @marjanblan on Unsplash.
-  
 toc: true
+aliases: 
+  - /news-and-views/datasciencebites/posts/2023/03/02/basket-complementarity.html
 ---
 Anyone who has ever worked in a retail store will be familiar with the concept of cross-selling. A customer wants a can of paint? Try to sell them some paintbrushes. That new cellphone they’ve just decided to buy? They’ll probably need a case to protect it. Online retailers (and digital services of all sorts) have taken this idea and run with it, to great success. Sophisticated algorithms sort through data on a customer’s past transactions, and those of similar-looking customers, to identify and recommend other products a customer might be interested in.  
 
