--- a/ideas/datasciencebites/posts/2022/12/13/ridesharing.qmd
+++ b/ideas/datasciencebites/posts/2022/12/13/ridesharing.qmd
@@ -14,6 +14,7 @@ toc: true
 aliases: 
   - /news-and-views/datasciencebites/posts/2022-12-13-ridesharing/ridesharing.html
   - /news-and-views/datasciencebites/posts/2022/12/13/ridesharing.html
+  - /news-and-views/datasciencebites/posts/2022/12/13/ridesharing.qmd
 ---
 :::{.callout-note collapse="false"}
 ## About the paper and this post
